Full Version. Includes following changes and features:
- Restructured the index.html page. Added styling to search button.
-  Added list view of the foundWords result in Index.js.
- Added highlight option to the list menu to allow rows to be colored when clicked.
- Added book icons next to list items.
-Added jQuery support and scripting.

--- a/word unscrambler/unscrambler/design.css
+++ b/word unscrambler/unscrambler/design.css
@@ -25,7 +25,20 @@ body {
   color: green;
 }
 
-.lastResult {
-  color: green;
-  padding: 3px;
+#resultlist {
+      list-style-image: url('/icons/dictionary-icon.png');
+}
+
+.word-item  {
+    font-size: 14px;
+    padding: 5px 7px;
+    background: #ccc;
+    margin: 2px;
+    border-radius: 5px;
+    border: 2px solid #999;
+    cursor: pointer;
+}
+
+.word-item.fav {
+  color: red;
 }
