Added new feature
- Select element to higlight and click "Clear Selected" button to remove list items.

--- a/word unscrambler/unscrambler/design.css
+++ b/word unscrambler/unscrambler/design.css
@@ -25,6 +25,12 @@ body {
   color: green;
 }
 
+.clear {
+  margin: auto;
+  text-align: center;
+  font-size: 12pt;
+}
+
 #resultlist {
       list-style-image: url('/icons/dictionary-icon.png');
 }
